--- a/main.html
+++ b/main.html
@@ -28,13 +28,13 @@
               <a class="menu-link link" href="">Employers</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href=""></a>Candidates
+              <a class="menu-link link" href="">Candidates</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href=""></a>Company
+              <a class="menu-link link" href="">Company</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link link" href=""></a>Blog
+              <a class="menu-link link" href="">Blog</a>
             </li>
           </ul>
         </nav>
@@ -57,7 +57,7 @@
     </header>
     <main>
       <section class="hero-section">
-        <div class="conteiner">
+        <div class="hero-wrap conteiner">
           <div class="left-hero">
             <h1 class="hero-title">
               Let’s <span class="main-word-title">Boost up</span> your hiring
@@ -72,13 +72,7 @@
               <li class=""><button type="button">Post a job</button></li>
             </ul>
           </div>
-          <div class="right-hero">
-            <ul>
-              <li>pn</li>
-              <li><img src="" alt="" /></li>
-              <li><img src="" alt="" /></li>
-            </ul>
-          </div>
+          <div class="right-hero"></div>
         </div>
       </section>
     </main>
